force-app/main/default/objects/COGS_Set_Value__c/COGS_Set_Value__c.object-meta.xml
<CustomObject>
    <description>This object stores single values of COGS.
Every object is linked to a Set (which in turn is linked to a product) and a quarter object.
Next to that it has metadata to identify the &quot;origin&quot; (e.g. real value, predicted by logistics/sourcing, predicted by PCOGS tool)</description>
    <label>COGS Set Value</label>
    <nameField>
        <label>COGS Set Values Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COGS Set Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>