force-app/main/default/objects/COGS_Set_Value__c/fields/COGS_Quarter__c.field-meta.xml
<CustomField>
    <fullName>COGS_Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quarter when the value is valid</description>
    <label>COGS Quarter</label>
    <referenceTo>COGS_Quarter__c</referenceTo>
    <relationshipLabel>COGS Set Values</relationshipLabel>
    <relationshipName>COGS_Set_Values</relationshipName>
    <type>Lookup</type>
</CustomField>