force-app/main/default/objects/COGS_Set_Value__c/fields/COGS_Set__c.field-meta.xml
<CustomField>
    <fullName>COGS_Set__c</fullName>
    <label>COGS Set</label>
    <referenceTo>COGS_Set__c</referenceTo>
    <relationshipLabel>COGS Set Values</relationshipLabel>
    <relationshipName>COGS_Set_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>