force-app/main/default/objects/COGS_Set_Value__c/fields/Next_Year_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_Quarter__c</fullName>
    <description>This formula calculates Quarter for next year. Used in Opportunity Product to show Next Year COGS Budget .</description>
    <formula>IF(NOT(ISNULL(COGS_Quarter__r.Start_Date__c)) &amp;&amp; (YEAR(COGS_Quarter__r.Start_Date__c) = (YEAR(TODAY())+1)),TEXT(CEILING( MONTH ( COGS_Quarter__r.Start_Date__c ) / 3 )),&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Year Quarter</label>
    <type>Text</type>
</CustomField>