force-app/main/default/objects/COGS_Set_Value__c/recordTypes/COGS_Set_Value_PM.recordType-meta.xml
<RecordType>
    <fullName>COGS_Set_Value_PM</fullName>
    <active>true</active>
    <description>A COGS value predicted by PM using the PCOGS tool</description>
    <label>COGS Set Value PM</label>
</RecordType>