force-app/main/default/objects/COGS_Set_Value__c/recordTypes/COGS_Set_Value_Real.recordType-meta.xml
<RecordType>
    <fullName>COGS_Set_Value_Real</fullName>
    <active>true</active>
    <description>This stores the real COGS value</description>
    <label>COGS Set Value Real</label>
</RecordType>