force-app/main/default/objects/COGS_Set_Value__c/recordTypes/COGS_Set_Value_Sourcing.recordType-meta.xml
<RecordType>
    <fullName>COGS_Set_Value_Sourcing</fullName>
    <active>true</active>
    <description>A COGS value predicted by Sourcing dept</description>
    <label>COGS Set Value Sourcing</label>
</RecordType>